--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,16 @@
       <artifactId>spring-context</artifactId>
       <version>4.3.12.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>4.3.12.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>4.3.12.RELEASE</version>
+    </dependency>
     <!-- spring end -->
     <!-- jackson -->
     <dependency>
